# the-python-bay

./: .gitignore  README.md  pyproject.toml  setup.py
.circleci/: config.yml
tests/: test_tbh_search.py
the_python_bay/: __init__.py  main.py
the_python_bay.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
the_python_bay/tests/: test_the_python_bay.py
tpb/: search.py
