[tool.poetry]
name = "the-python-bay"
version = "1.0.2"
description = "A python library for searching thepiratebay.org"
authors = ["philhabell"]
license = "GNU General Public License"

[tool.poetry.dependencies]
python = "^3.8"
setuptools = "^50.3.2"

[tool.poetry.dev-dependencies]
setuptools = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
