[tool.poetry]
name = "the-python-bay"
version = "1.1.0"
description = "A python library for searching thepiratebay.org"
authors = ["philhabell"]
license = "GNU General Public License"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
twine = "^3.2.0"
setuptools = "^50.3.2"

[build-system]
requires = ["poetry-core>=1.0.0","setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
