[tool.poetry]
name = "the-python-bay"
version = "1.2.3"
description = "A python library for searching thepiratebay.org"
authors = ["Philip Bell <philhabell@gmail.com>"] 
maintainers = ["Philip Bell <philhabell@gmail.com>"] 
license = "GNU General Public License"
repository = "https://github.com/philhabell/the-python-bay"
documentation = "https://github.com/philhabell/the-python-bay/blob/main/README.md"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"
flake8 = "*"
twine = "*"
setuptools = "*"

[build-system]
requires = ["poetry-core>=1.0.0","setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
